--- a/navbar.html
+++ b/navbar.html
@@ -4,7 +4,7 @@
 <header>
     <nav class="navbar">
         <ul>
-            <li><a href="/first_website/index.php">HOME</a></li>
+            <li><a href="/first_website/index.html">HOME</a></li>
             <li><a href="/first_website/routine.php">Routine</a></li>
             <li><a href="/first_website/objectifs.php">Objectifs</a></li>
             <li><a href="/first_website/japonais.php">Japonais</a>
@@ -39,4 +39,5 @@
             </li>
         </ul>
     </nav>
+
 </header>
