--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-<script>
-fetch("navbar.html")
-  .then(response => response.text())
-  .then(data => {
-    document.getElementById("navbar-placeholder").innerHTML = data;
-  });
-</script>
 <!DOCTYPE html>
 <html lang="fr">
 
@@ -16,6 +9,14 @@ fetch("navbar.html")
 </head>
 
 <body>
+    <div id="navbar-placeholder"></div>
+    <script>
+    fetch("navbar.html")
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById("navbar-placeholder").innerHTML = data;
+      });
+    </script>
     <main>
         <h2>Mon tout premier site</h1>
             <p>
